Reverts templating for jwt secret name in the ui

--- a/packages/ui/chart/templates/ui/deployment.yaml
+++ b/packages/ui/chart/templates/ui/deployment.yaml
@@ -40,7 +40,7 @@ spec:
               {{ else }}
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "supabase.jwt.secretName" . }}
+                  name: supabase-bootstrap-jwt
                   key: anon-key
                   optional: true
               {{ end }}
