--- a/packages/llama-cpp-python/Dockerfile
+++ b/packages/llama-cpp-python/Dockerfile
@@ -24,9 +24,25 @@ ENV PATH="/leapfrogai/.venv/bin:$PATH"
 
 # copy the llama-cpp-python build dependencies over
 # NOTE: We are copying to this filename because installing 'optional extras' from a wheel requires the absolute path to the wheel file (instead of a wildcard whl)
-COPY build/*.whl build/
-COPY build/lfai_llama_cpp_python*.whl .
-RUN pip install lfai_llama_cpp_python*.whl --no-index --find-links=build/
+#COPY build/*.whl build/
+#COPY build/lfai_llama_cpp_python*.whl .
+
+# copy source
+USER root
+COPY src ./src
+COPY . ./package
+RUN chown -R nonroot:nonroot ./src
+RUN chown -R nonroot:nonroot ./package
+USER nonroot
+
+# build sdk
+RUN python -m pip wheel ./src/leapfrogai_sdk -w build
+
+# build llama_cpp
+RUN python -m pip wheel ./package -w build --find-links=build/
+
+# install
+RUN pip install build/lfai_llama_cpp_python*.whl --no-index --find-links=build/
 
 # hardened and slim python image
 FROM --platform=$BUILDPLATFORM ghcr.io/defenseunicorns/leapfrogai/python:3.11
