feat: Add supabase deployment package (#380)
Adds Supabase with initial configs to get it deployed via Zarf and UDS.

- Includes some basic e2e tests that verify the supabase package can be built and deployed
- Readme with baisc deployment instructions
- Automatically creates a default keycloak client with the id uds-supabase for integration with the UI

--- a/uds-bundles/dev/gpu/uds-bundle.yaml
+++ b/uds-bundles/dev/gpu/uds-bundle.yaml
@@ -30,6 +30,11 @@ packages:
     path: ../../../packages/whisper
     ref: dev
 
+  # Supabase backend for the UI and API to interface with Postgresql
+  - name: supabase
+    path: ../../../packages/supabase/
+    ref: dev
+
   # UI
   - name: lfaiui
     path: ../../../packages/ui/
