--- a/uds-bundles/latest/cpu/uds-bundle.yaml
+++ b/uds-bundles/latest/cpu/uds-bundle.yaml
@@ -40,6 +40,11 @@ packages:
     ref: 0.6.1
     # x-release-please-end
 
+  # Supabase backend for the UI and API to interface with Postgresql
+  - name: supabase
+    path: ../../../packages/supabase/
+    ref: dev
+
   # UI - new UI TODO - point to ghcr image after Sprint 0.7.0
   - name: lfaiui
     path: ../../../packages/ui/
