--- a/packages/ui/chart/templates/ui/deployment.yaml
+++ b/packages/ui/chart/templates/ui/deployment.yaml
@@ -40,7 +40,7 @@ spec:
               {{ else }}
               valueFrom:
                 secretKeyRef:
-                  name: supabase-jwt
+                  name: supabase-bootstrap-jwt
                   key: anon-key
                   optional: true
               {{ end }}
