--- a/uds-bundles/latest/gpu/uds-config.yaml
+++ b/uds-bundles/latest/gpu/uds-config.yaml
@@ -23,15 +23,8 @@ variables:
     top_k: 20
 
   leapfrogai-ui:
-    domain: https://ai.uds.dev
-    model: vllm
-    concurrent_requests: "true"
-    ai4ns_branding: "false"
-    leapfrogai_rag_url: http://rag.leapfrogai.svc.cluster.local:8000
-    max_tokens: 16384
-
-  lfaiui:
     domain: https://lfaiui.uds.dev
     model: vllm
     supabase_url: https://supabase-kong.uds.dev
+    disable_keycloak: false # If this package is deployed as a bundle, keycloak is assumed default
     supabase_anon_key: ''
