--- a/uds-bundles/dev/cpu/uds-config.yaml
+++ b/uds-bundles/dev/cpu/uds-config.yaml
@@ -19,7 +19,7 @@ variables:
 
   leapfrogai-ui:
     domain: https://ai.uds.dev
-    model: vllm
+    model: llama-cpp-python
     supabase_url: https://supabase-kong.uds.dev
     disable_keycloak: false # If this package is deployed as a bundle, keycloak is assumed default
     supabase_anon_key: ''
