feat: ui assistants management (#469)
* feat: assistants management page and create assistant
* feat: assistants management page and create assistant

---------

Co-authored-by: John Alling <john.alling@defenseunicorns.com>
Co-authored-by: Jonathan Perry <YrrepNoj@gmail.com>

--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -75,6 +75,7 @@
     "msw": "^2.2.14",
     "openai": "^4.41.1",
     "playwright": "^1.42.1",
+    "svelte-forms-lib": "^2.0.1",
     "uuid": "^9.0.1",
     "yup": "^1.4.0"
   }
