--- a/uds-bundles/dev/cpu/uds-config.yaml
+++ b/uds-bundles/dev/cpu/uds-config.yaml
@@ -18,7 +18,8 @@ variables:
     top_k: 20
 
   leapfrogai-ui:
-    domain: https://ai.uds.dev
+    subdomain: ai
+    domain: uds.dev
     model: llama-cpp-python
     supabase_url: https://supabase-kong.uds.dev
     disable_keycloak: false # If this package is deployed as a bundle, keycloak is assumed default
