--- a/uds-bundles/dev/gpu/uds-config.yaml
+++ b/uds-bundles/dev/gpu/uds-config.yaml
@@ -23,7 +23,8 @@ variables:
     top_k: 20
 
   leapfrogai-ui:
-    domain: https://ai.uds.dev
+    subdomain: ai
+    domain: uds.dev
     model: vllm
     supabase_url: https://supabase-kong.uds.dev
     disable_keycloak: false # If this package is deployed as a bundle, keycloak is assumed default
