chore: Misc UI package configuration updates (#495)
* fix: add 'local-registry' target as dependency to 'build-ui'
* chore: refactor package name from 'lfaiui' to 'leapfrogai-ui'
* chore: update default UI hostname from 'lfaiui' to 'ai'
* chore: update example keycloak_client_id
* fix: update default model for CPU bundles to not use a GPU model
* fix: update subdomain and domain settings for UI deployment

--- a/uds-bundles/dev/cpu/uds-config.yaml
+++ b/uds-bundles/dev/cpu/uds-config.yaml
@@ -17,8 +17,10 @@ variables:
     embedding_model_name: text-embeddings
     top_k: 20
 
-  lfaiui:
-    domain: https://lfaiui.uds.dev
-    model: vllm
+  leapfrogai-ui:
+    subdomain: ai
+    domain: uds.dev
+    model: llama-cpp-python
     supabase_url: https://supabase-kong.uds.dev
+    disable_keycloak: false # If this package is deployed as a bundle, keycloak is assumed default
     supabase_anon_key: ''
