--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -21,9 +21,12 @@ variables:
     default: my-test-key
     prompt: true
     sensitive: true
+  - name: SUBDOMAIN
+    description: The subdomain for the application, Istio-ingress configuration
+    default: "ai"
   - name: DOMAIN
     description: The domain to use for the application, Istio-ingress configuration
-    default: https://lfaiui.uds.dev
+    default: "uds.dev"
     prompt: true
     sensitive: true
   - name: MODEL
@@ -63,10 +66,10 @@ variables:
     sensitive: false
 
 components:
-  - name: lfaiui
+  - name: leapfrogai-ui
     required: true
     charts:
-      - name: lfaiui
+      - name: leapfrogai-ui
         namespace: leapfrogai
         localPath: chart
         valuesFiles:
@@ -82,6 +85,6 @@ components:
           - wait:
               cluster:
                 kind: Deployment
-                name: lfaiui
+                name: leapfrogai-ui
                 namespace: leapfrogai
                 condition: Available
