--- a/uds-bundles/latest/cpu/uds-config.yaml
+++ b/uds-bundles/latest/cpu/uds-config.yaml
@@ -18,15 +18,9 @@ variables:
     top_k: 20
 
   leapfrogai-ui:
-    domain: https://ai.uds.dev
+    subdomain: ai
+    domain: uds.dev
     model: llama-cpp-python
-    concurrent_requests: "false"
-    ai4ns_branding: "false"
-    leapfrogai_rag_url: http://rag.leapfrogai.svc.cluster.local:8000
-    max_tokens: 8192
-
-  lfaiui:
-    domain: https://lfaiui.uds.dev
-    model: vllm
     supabase_url: https://supabase-kong.uds.dev
+    disable_keycloak: false # If this package is deployed as a bundle, keycloak is assumed default
     supabase_anon_key: ''
