chore: update keycloak client name

--- a/packages/supabase/chart/templates/uds-package.yaml
+++ b/packages/supabase/chart/templates/uds-package.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Values.leapfrogai.package.name }}
 spec:
   sso:
-    - name: Supabase
+    - name: Leapfrog AI
       description: Client for logging into Supabase
       clientId: {{ .Values.leapfrogai.sso.clientId }}
       redirectUris:
