--- a/packages/text-embeddings/Dockerfile
+++ b/packages/text-embeddings/Dockerfile
@@ -12,9 +12,24 @@ ENV PATH="/leapfrogai/.venv/bin:$PATH"
 # copy and install all python dependencies
 # NOTE: We are copying the leapfrog whl to this filename because installing 'optional extras' from
 #       a wheel requires the absolute path to the wheel file (instead of a wildcard whl)
-COPY build/*.whl build/
-COPY build/lfai_text_embeddings*.whl .
-RUN pip install lfai_text_embeddings*.whl --no-index --find-links=build/
+# COPY build/*.whl build/
+# COPY build/lfai_text_embeddings*.whl .
+# copy source
+USER root
+COPY src ./src
+COPY . ./package
+RUN chown -R nonroot:nonroot ./src
+RUN chown -R nonroot:nonroot ./package
+USER nonroot
+
+# build sdk
+RUN python -m pip wheel ./src/leapfrogai_sdk -w build
+
+# build package
+RUN python -m pip wheel ./package -w build --find-links=build/
+
+# install
+RUN pip install build/lfai_text_embeddings*.whl --no-index --find-links=build/
 
 
 # download model
