Formatting changes and re-architect vllm

--- a/packages/vllm/Dockerfile
+++ b/packages/vllm/Dockerfile
@@ -79,4 +79,4 @@ RUN python3 src/model_download.py
 
 EXPOSE 50051:50051
 
-ENTRYPOINT ["python", "-u", "src/main.py"]
+ENTRYPOINT ["python", "-m", "leapfrogai_sdk.cli", "--app-dir=.", "main:Model"]
