chore: add zarf variable to api package for exposing the OpenAPI specification
The default setting for the new value is 'false' meaning the API will not be exposed by default.

--- a/packages/api/lfai-values.yaml
+++ b/packages/api/lfai-values.yaml
@@ -1,3 +1,6 @@
 image:
   lfaiAPITag: ###ZARF_CONST_LEAPFROGAI_API_VERSION###
   kiwigridTag: ###ZARF_CONST_KIWIGRID_VERSION###
+
+api:
+  exposeOpenAPISchema: ###ZARF_VAR_EXPOSE_OPENAPI_SCHEMA###
