--- a/packages/api/chart/templates/uds-package.yaml
+++ b/packages/api/chart/templates/uds-package.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.api.exposeOpenAPISchema }}
 apiVersion: uds.dev/v1alpha1
 kind: Package
 metadata:
@@ -6,11 +7,11 @@ metadata:
 spec:
   network:
     expose:
-      - service: api 
+      - service: api
         podLabels:
           app: api
         host: {{ .Values.package.host }}
-        gateway: tenant 
+        gateway: tenant
         port: 8080
 
     allow:
@@ -19,8 +20,9 @@ spec:
 
       - direction: Egress
         remoteGenerated: Anywhere
-      
+
       - direction: Egress
         podLabels:
           app: api
         remoteGenerated: Anywhere
+{{- end }}
