--- a/packages/api/zarf.yaml
+++ b/packages/api/zarf.yaml
@@ -14,6 +14,11 @@ constants:
   - name: KIWIGRID_VERSION
     value: "1.23.3"
 
+variables:
+  - name: EXPOSE_OPENAPI_SCHEMA
+    default: "false"
+    description: "Flag to expose the OpenAPI schema for debugging."
+
 components:
   - name: leapfrogai
     required: true
