--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -60,6 +60,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@carbon/colors": "^11.21.0",
     "@carbon/layout": "^11.20.0",
     "@carbon/themes": "^11.32.0",
     "@carbon/type": "^11.26.0",
@@ -70,6 +71,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "@testing-library/user-event": "^14.5.2",
     "ai": "^3.0.13",
+    "carbon-pictograms-svelte": "^12.10.0",
     "concurrently": "^8.2.2",
     "fuse.js": "^7.0.0",
     "msw": "^2.2.14",
