chore(ci): add 'milestoned' event trigger to required workflows

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -5,6 +5,7 @@ on:
       - ready_for_review
       - review_requested
       - synchronize
+      - milestoned
     paths:
       # Catch-all
       - "**"
