--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,5 +1,11 @@
 name: lint
-on: [pull_request]
+on:
+  pull_request:
+    types:
+      - ready_for_review
+      - review_requested
+      - synchronize
+      - milestoned
 
 # Declare default permissions as read only.
 permissions: read-all
