--- a/packages/vllm/pyproject.toml
+++ b/packages/vllm/pyproject.toml
@@ -9,7 +9,9 @@ version = "0.6.1"
 dependencies = [
     "pydantic >= 2.3.0",
     "vllm==0.4.2",
-    "flash-attn",
+    "ninja>=2.5.8",
+    "packaging>=2.5.8",
+    "flash-attn>=2.5.8",
     "python-dotenv>=1.0.1",
     "aiostream>=0.5.2",
     "leapfrogai-sdk",
