--- a/packages/vllm/pyproject.toml
+++ b/packages/vllm/pyproject.toml
@@ -9,6 +9,7 @@ version = "0.6.1"
 dependencies = [
     "pydantic >= 2.3.0",
     "vllm==0.4.2",
+    "wheel==0.43.0",
     "packaging>=2.5.8",
     "ninja>=1.11.1.1",
     "flash-attn>=2.5.8",
