--- a/uds-bundles/latest/cpu/uds-bundle.yaml
+++ b/uds-bundles/latest/cpu/uds-bundle.yaml
@@ -41,6 +41,8 @@ packages:
     # x-release-please-end
 
   # UI - new UI TODO - point to ghcr image after Sprint 0.7.0
-  - name: lfaiui
+  - name: leapfrogai-ui
     path: ../../../packages/ui/
-    ref: dev
+    # x-release-please-start-version
+    ref: 0.6.1
+    # x-release-please-end
