--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -30,6 +30,16 @@
           "type": "generic",
           "path": "**/uds-bundle.yaml",
           "glob": true
+        },
+        {
+          "type": "generic",
+          "path": "**/pyproject.toml",
+          "glob": true
+        },
+        {
+          "type": "generic",
+          "path": "**/zarf-config.yaml",
+          "glob": true
         }
       ]
     }
