--- a/packages/vllm/pyproject.toml
+++ b/packages/vllm/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.6.1"
 
 dependencies = [
     "pydantic >= 2.3.0",
-    "vllm==0.4.2",
+    "vllm==0.4.0.post1",
     "wheel==0.43.0",
     "packaging>=2.5.8",
     "ninja>=1.11.1.1",
