--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -48,7 +48,7 @@ jobs:
           python-version-file: 'pyproject.toml'
 
       - name: Run Repeater
-        run: docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:0.3.3
+        run: docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:dev
 
       - name: Install Python Deps
         run: pip install "." "src/leapfrogai_api" "src/leapfrogai_sdk"
