--- a/uds-bundles/latest/cpu/uds-config.yaml
+++ b/uds-bundles/latest/cpu/uds-config.yaml
@@ -24,6 +24,9 @@ variables:
       - "https://ai.uds.dev"
     hosted_domain: "uds.dev"
 
+  leapfrogai-api:
+    hosted_domain: "uds.dev"
+
   leapfrogai-ui:
     subdomain: ai
     domain: uds.dev
