Enables RLS on the API and swaps service ky for anon key

--- a/packages/api/chart/templates/api/deployment.yaml
+++ b/packages/api/chart/templates/api/deployment.yaml
@@ -47,11 +47,11 @@ spec:
             value: "{{ .Values.api.port }}"
           - name: SUPABASE_URL
             value: "{{ .Values.supabase.url }}"
-          - name: SUPABASE_SERVICE_KEY
+          - name: SUPABASE_ANON_KEY
             valueFrom:
               secretKeyRef:
                 name: supabase-bootstrap-jwt
-                key: service-key
+                key: anon-key
                 optional: true
           ports:
             - containerPort: 8080
