--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -58,7 +58,7 @@ auth:
     GOTRUE_EXTERNAL_KEYCLOAK_ENABLED: "###ZARF_VAR_ENABLE_EXTERNAL_KEYCLOAK###"
     GOTRUE_EXTERNAL_KEYCLOAK_CLIENT_ID: "{{ .Values.leapfrogai.sso.clientId }}"
     GOTRUE_EXTERNAL_KEYCLOAK_REDIRECT_URI: "https://{{ .Values.leapfrogai.package.host }}.###ZARF_VAR_HOSTED_DOMAIN###/auth/v1/callback"
-    GOTRUE_EXTERNAL_KEYCLOAK_URL: "https://keycloak.admin.###ZARF_VAR_HOSTED_DOMAIN###/realms/uds"
+    GOTRUE_EXTERNAL_KEYCLOAK_URL: "https://sso.###ZARF_VAR_HOSTED_DOMAIN###/realms/uds"
   image:
     tag: 2.149.0-debian-12-r0
   resourcesPreset: "none"
