--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -47,8 +47,11 @@ jobs:
         with:
           python-version-file: 'pyproject.toml'
 
+      - name: Build Repeater
+        run: LOCAL_VERSION=dev make build-repeater
+
       - name: Run Repeater
-        run: docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:0.7.3
+        run: docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:dev
 
       - name: Install Python Deps
         run: pip install "." "src/leapfrogai_api" "src/leapfrogai_sdk"
