--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -48,7 +48,11 @@ jobs:
           python-version-file: 'pyproject.toml'
 
       - name: Build Repeater
-        run: LOCAL_VERSION=dev make build-repeater
+        run: |
+          make local-registry
+          make setup-repeater-deps
+          docker build -t ghcr.io/defenseunicorns/leapfrogai/repeater:dev packages/repeater
+          docker tag ghcr.io/defenseunicorns/leapfrogai/repeater:dev localhost:5000/defenseunicorns/leapfrogai/repeater:dev
 
       - name: Run Repeater
         run: docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:dev
