Return finish reason field & VLLM Refactor (#493)
When performing a completion or chat completion return the `finish_reason` according to the api spec.
* Adds finish reason in completion/chat completion that mirrors the OpenAI spec
* Adds token usage in completion/chat completion responses that mirrors the OpenAI spec

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -47,8 +47,15 @@ jobs:
         with:
           python-version-file: 'pyproject.toml'
 
+      - name: Build Repeater
+        run: |
+          make local-registry
+          make setup-repeater-deps
+          docker build -t ghcr.io/defenseunicorns/leapfrogai/repeater:dev packages/repeater
+          docker tag ghcr.io/defenseunicorns/leapfrogai/repeater:dev localhost:5000/defenseunicorns/leapfrogai/repeater:dev
+
       - name: Run Repeater
-        run: docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:0.3.3
+        run: docker run -p 50051:50051 -d --name=repeater ghcr.io/defenseunicorns/leapfrogai/repeater:dev
 
       - name: Install Python Deps
         run: pip install "." "src/leapfrogai_api" "src/leapfrogai_sdk"
