--- a/src/leapfrogai_api/Makefile
+++ b/src/leapfrogai_api/Makefile
@@ -3,7 +3,7 @@ install:
 
 dev:
 	make install
-	python -m uvicorn main:app --port 3000 --reload
+	python -m uvicorn main:app --port 3000 --reload --log-level info
 
 test-integration:
 	cd ../../ && python -m pytest tests/integration/api
