--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -110,13 +110,12 @@ jobs:
         - name: Set environment variable
           id: set-env-var
           run: |
-            echo "SERVICE_KEY=$(uds zarf tools kubectl get secret supabase-bootstrap-jwt -n leapfrogai -o jsonpath='{.data.service-key}' | base64 -d)" >> "$GITHUB_ENV"
             echo "ANON_KEY=$(uds zarf tools kubectl get secret supabase-bootstrap-jwt -n leapfrogai -o jsonpath='{.data.anon-key}' | base64 -d)" >> "$GITHUB_ENV"
 
         - name: Test API
           run: |
             python -m pip install requests
-            python -m pytest ./tests/e2e/test_api.py -v
+            python -m pytest ./tests/e2e/test_api_auth.py -v
 
         ##########
         # llama
