--- a/src/leapfrogai_api/pyproject.toml
+++ b/src/leapfrogai_api/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "langchain >= 0.2.1",
     "langchain-community >= 0.2.1",
     "unstructured[all-docs] >= 0.14.2",
-    "python-magic >= 0.4.27"
+    "filemime >= 0.0.3"
 ]
 requires-python = "~=3.11"
 
