--- a/src/leapfrogai_api/pyproject.toml
+++ b/src/leapfrogai_api/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "langchain >= 0.2.1",
     "langchain-community >= 0.2.1",
     "unstructured[all-docs] >= 0.14.2",
-    "filemime >= 0.0.3"
+    "pylibmagic >= 0.5.0", # Resolves issue with libmagic not being bundled with OS - https://github.com/ahupp/python-magic/issues/233
+    "python-magic >= 0.4.27"
 ]
 requires-python = "~=3.11"
 
