--- a/packages/api/chart/templates/migration-job.yaml
+++ b/packages/api/chart/templates/migration-job.yaml
@@ -15,6 +15,11 @@ spec:
                   name: supabase-postgresql
                   key: postgres-password
         # NOTE: This command is assuming the default username.
-        command: ["supabase", "db", "push", "--db-url=postgresql://postgres:$(POSTGRES_PASSWORD)@supabase-postgresql.{{ .Release.Namespace }}.svc.cluster.local:5432", "--debug"]
+        command: ["/bin/sh"]
+        args:
+          - -c
+          - >-
+            supabase migration fetch --db-url=postgresql://postgres:$(POSTGRES_PASSWORD)@supabase-postgresql.leapfrogai.svc.cluster.local:5432 --debug || true &&
+            supabase db push --db-url=postgresql://postgres:$(POSTGRES_PASSWORD)@supabase-postgresql.leapfrogai.svc.cluster.local:5432 --debug]
       restartPolicy: Never
   backoffLimit: 4
