--- a/src/leapfrogai_ui/supabase/Dockerfile
+++ b/src/leapfrogai_ui/supabase/Dockerfile
@@ -1,27 +1,15 @@
-FROM alpine:latest
-
-WORKDIR /home
-
-ARG USER=leapfrogai
-USER root
-
+FROM cgr.dev/chainguard/bash:latest
 ARG version="1.169.8"
 ENV version=${version}
-RUN apk add --update sudo
-RUN apk add --no-cache libc6-compat
 
-# Install the supabase cli
-RUN wget https://github.com/supabase/cli/releases/download/v${version}/supabase_${version}_linux_amd64.apk
-RUN apk add --no-cache --allow-untrusted supabase_${version}_linux_amd64.apk
-RUN rm supabase_${version}_linux_amd64.apk
+# Download the supabase cli
+RUN mkdir /usr/local/bin
+RUN curl -LO https://github.com/supabase/cli/releases/download/v${version}/supabase_linux_amd64.tar.gz
+RUN tar -xzf supabase_linux_amd64.tar.gz -C /usr/local/bin/
+RUN rm supabase_linux_amd64.tar.gz
 
-# Add a new (non-root) user to run as
-RUN adduser -D $USER \
-        && echo "$USER ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/$USER \
-        && chmod 0440 /etc/sudoers.d/$USER
+# 65532 is the UID of the `nonroot` user in chainguard/static.  See: https://edu.chainguard.dev/chainguard/chainguard-images/reference/static/overview/#users
+USER 65532:65532
 
-# Copy all migration scripts
-COPY migrations/*.sql supabase/migrations/
-
-RUN chown -R $USER:$USER /home
-USER $USER
+# Download the migration scripts
+COPY --chown=65532:65532 migrations/*.sql supabase/migrations/
