chore: make supabase migration container support arm platoforms

--- a/packages/api/supabase/Dockerfile
+++ b/packages/api/supabase/Dockerfile
@@ -1,12 +1,13 @@
-FROM cgr.dev/chainguard/bash:latest
+FROM --platform=$TARGETPLATFORM cgr.dev/chainguard/bash:latest
+ARG TARGETPLATFORM
 ARG version="1.169.8"
-ENV version=${version}
 
 # Download the supabase cli
-RUN mkdir /usr/local/bin
-RUN curl -LO https://github.com/supabase/cli/releases/download/v${version}/supabase_linux_amd64.tar.gz
-RUN tar -xzf supabase_linux_amd64.tar.gz -C /usr/local/bin/
-RUN rm supabase_linux_amd64.tar.gz
+RUN mkdir -p /usr/local/bin
+RUN ARCH=$(echo $TARGETPLATFORM | cut -d '/' -f2) \
+    && curl -LO https://github.com/supabase/cli/releases/download/v${version}/supabase_linux_${ARCH}.tar.gz \
+    && tar -xzf supabase_linux_${ARCH}.tar.gz -C /usr/local/bin/ \
+    && rm supabase_linux_${ARCH}.tar.gz
 
 # 65532 is the UID of the `nonroot` user in chainguard/static.  See: https://edu.chainguard.dev/chainguard/chainguard-images/reference/static/overview/#users
 USER 65532:65532
